---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/expect-pass/fib.arc
---
fun fib(n: i32) {
    if n > 2 {
        fib(n - 1) + fib(n - 2)
    } else {
        0
    }
}
fun test() {
    fib(5)
}

